--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "ledger-apdu",
     "ledger-transport",
     "ledger-transport-hid",
+    "ledger-transport-ble",
     "ledger-transport-zemu",
     "ledger-zondax-generic",
 ]
