--- a/ledger-transport-ble/Cargo.toml
+++ b/ledger-transport-ble/Cargo.toml
@@ -17,7 +17,7 @@ byteorder = "1.4"
 cfg-if = "1.0.0"
 thiserror = "1.0"
 hex = "0.4"
-log = "0.4"
+log = { version = "0.4", features = ["std"] }
 
 btleplug = "0.10"
 tokio = { version = "1", features = ["macros"] }
@@ -26,8 +26,6 @@ uuid = "1"
 lazy_static = "1"
 
 ledger-transport = "0.10"
-
-# hidapi = { version = "1.4.1", features = ["linux-static-hidraw"], default-features = false }
 
 [dev-dependencies]
 once_cell = "1"
